[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://assets/Effects/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://instance/hurtboxAndHitbox/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://instance/enemy/Bat.gd" type="Script" id=4]
[ext_resource path="res://instance/game/Health.tscn" type="PackedScene" id=5]
[ext_resource path="res://instance/enemy/PlayerDetection.tscn" type="PackedScene" id=6]
[ext_resource path="res://instance/hurtboxAndHitbox/Hitbox.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Fly",
"speed": 9.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 4.68144

[sub_resource type="CapsuleShape2D" id=8]
radius = 6.5
height = 5.04813

[sub_resource type="CircleShape2D" id=9]
radius = 56.8008

[sub_resource type="CircleShape2D" id=10]
radius = 5.8284

[node name="Bat" type="KinematicBody2D"]
collision_layer = 2147483664
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "Fly"
frame = 4
playing = true
offset = Vector2( 0, -12 )

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -0.111366, -13.8089 )
shape = SubResource( 8 )

[node name="EnemyStats" parent="." instance=ExtResource( 5 )]

[node name="PlayerDetection" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
scale = Vector2( 1.05901, 0.895924 )
shape = SubResource( 9 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0.353558, -14.8492 )
shape = SubResource( 10 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="EnemyStats" to="." method="_on_EnemyStats_no_health"]

[editable path="Hurtbox"]

[editable path="PlayerDetection"]

[editable path="Hitbox"]
